--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -88,7 +88,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
       .oO loading system objs Oo.
 [INFO]  [/sys/scheduler] scheduler started
 [INFO]  [/sys/router] router started
-[INFO]  [/sys/router] main memory [total=>5632]
+[INFO]  [/sys/router] main memory [total=>5376]
 [INFO]  [/sys/router] heap <none> spanning /sys/# mounted
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
@@ -134,10 +134,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
 [INFO]  [/mmadt/rec] mqtt://chibi.local:1883 mqtt fhatos_client connected
 [INFO]  [/sys/router] dsm /mnt/dsm spanning /shared/# mounted
 [INFO]  [/sys/router] mqtt boot config dropped
-[INFO]  [/mnt/bus] mapping /bus==>//io
-[INFO]  [/sys/router] bus /mnt/bus spanning /bus/# mounted
-[INFO]  [/sys/router] /io/console obj loaded
-[INFO]  [/sys/router] console boot config dropped
+[INFO]  [/sys/scheduler] /io/console thread spawned
 ----
 
 ++++
@@ -185,19 +182,19 @@ The [.h]#scheduler# controls and provides access to the various *processes* that
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> */sys/scheduler
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> */sys/scheduler
 >[
-==>thread=>[
-=>]
 ==>bundle=>[
 =>]
 ==>config=>[
 ===>def_stack_size=>16192
 =>]
 ==>::=>[
-===>spawn=>spawn?thread<=obj{?}(_)[cpp]
+===>spawn=>spawn?thread<=obj{?}(thread=>_)[cpp]
 ===>bundle=>bundle?obj<=obj{?}(fiber=>_)[cpp]
+=>]
+==>thread=>[
+===>/io/console
 =>]
 >]@/sys/scheduler
 ----
@@ -221,45 +218,14 @@ The [.h]#router# is responsible for storing and retrieving `objs` from a pool of
 
 [source,mmadt]
 ----
-thread spawned: inst()[cpp] [stack size:32384]
 fhatos> */sys/router
 >[
 ==>frame=>[rec][_]
 ==>config=>[
-===>resolve=>[
-====>namespace=>[
-=====>:=>/mmadt/
-=====>fos:=>/fos/
-===>]
-====>auto_prefix=>[
-=====>
-=====>/mmadt/
-=====>/mmadt/ext/
-=====>/fos/
-=====>/fos/sys/
-=====>/fos/io/
-=====>/fos/sensor/
-=====>/fos/ui/
-=====>/fos/util/
-=====>/sys/
-===>]
-====>query=>[
-=====>write=>[
-======>lock=>to_do
-====>]
-===>]
-====>default_config=>[
-=====>query=>[
-======>write=>[sub=>noobj]
-====>]
-===>]
-==>]
+===>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
 =>]
 ==>query=>[
-===>write=>[
-====>lock=>lock?obj{?}<=obj{?}()[cpp]
-====>sub=>sub?obj{?}<=obj()[cpp]
-==>]
+===>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
 =>]
 ==>structure=>[
 ===>/sys/#
@@ -271,7 +237,6 @@ fhatos> */sys/router
 ===>+/#
 ===>/disk/#
 ===>/shared/#
-===>/bus/#
 =>]
 >]@/sys/router
 ----
@@ -291,8 +256,7 @@ The [.h]#mmADT# language is embedded in the fURI address space thus enabling htt
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> */mmadt/#/
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> */mmadt/#/
 >[
 ==>/mmadt/and=>and?bool<=obj{?}(con?lst=>_)[cpp]
 ==>/mmadt/apply=>apply?obj{?}<=obj{?}(rhs=>_,args=>isa(/mmadt/rec))[cpp]
@@ -396,6 +360,7 @@ thread spawned: inst()[cpp] [stack size:32384]
 ==>/mmadt/not=>not?obj{?}<=obj(_)[cpp]
 ==>/mmadt/obj=>[obj][_]
 ==>/mmadt/objs=>[objs][_]
+==>/mmadt/option=>option?obj{?}<=obj{?}(_)[cpp]
 ==>/mmadt/or=>or?bool<=obj{?}(con?lst=>_)[cpp]
 ==>/mmadt/plus=>plus(_)
 ==>/mmadt/print=>print?obj{?}<=obj{?}(_)[cpp]
@@ -483,8 +448,7 @@ An `inst` written in C++.
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> *int::lt
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> *int::lt
 ==>lt?bool<=int(arg?int=>_)[cpp]
 ----
 
@@ -500,8 +464,7 @@ An `inst` written in mmADT.
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> *nat
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> *nat
 ==>nat?int<=int()[is(gte(0))]
 ----
 
@@ -521,13 +484,12 @@ A [yellow]#f#​[fuchsia]#h#​[aqua]*A*​[lime]*T*​[red]*O*​[blue]#s#​ i
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> # -> noobj
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> # -> noobj
 [ERROR] [/sys/router] # crosses multiple structures
-[INFO]  [/sys/router] 1 bus(s) closing
 [INFO]  [/sys/router] 1 dsm(s) closing
 [INFO]  [/sys/router] 1 fs(s) closing
 [INFO]  [/sys/router] 7 heap(s) closing
+[INFO]  [/sys/router] router /sys/router stopped
 ----
 
 ++++
@@ -603,8 +565,7 @@ bool::
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> /mmadt/bool[true]
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> /mmadt/bool[true]
 ==>true
 fhatos> bool[true]
 ==>true
@@ -648,8 +609,7 @@ real::
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> /mmadt/real[6.2]
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> /mmadt/real[6.2]
 ==>6.200000
 fhatos> real[6.2]
 ==>6.200000
@@ -671,8 +631,7 @@ str::
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> /mmadt/str['cooties']
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> /mmadt/str['cooties']
 ==>'cooties'
 fhatos> str['cooties']
 ==>'cooties'
@@ -721,13 +680,24 @@ lst[['a',2,true]]
 
 [source,mmadt]
 ----
-thread spawned: inst()[cpp] [stack size:32384]
 fhatos> /mmadt/lst[['a',2,true]]
-==>['a',2,true]
+>[
+==>'a'
+==>2
+==>true
+>]
 fhatos> lst[['a',2,true]]
-==>['a',2,true]
+>[
+==>'a'
+==>2
+==>true
+>]
 fhatos> ['a',2,true]
-==>['a',2,true]
+>[
+==>'a'
+==>2
+==>true
+>]
 ----
 
 ++++
@@ -749,7 +719,21 @@ rec[[a=>6,b=>false]]
 
 [source,mmadt]
 ----
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> /mmadt/rec[[a=>6,b=>false]]
+>[
+==>a=>6
+==>b=>false
+>]
+fhatos> rec[[a=>6,b=>false]]
+>[
+==>a=>6
+==>b=>false
+>]
+fhatos> [a=>6,b=>false]
+>[
+==>a=>6
+==>b=>false
+>]
 ----
 
 ++++
@@ -772,8 +756,7 @@ noobj
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> /mmadt/noobj[]
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> /mmadt/noobj[]
 fhatos> noobj[]
 fhatos> noobj
 fhatos> 
@@ -823,8 +806,7 @@ The mechanics of `obj` typing are exemplified below using the generally useful t
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> */mmadt/ext/#/
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> */mmadt/ext/#/
 >[
 ==>/mmadt/ext/C=>C()[is(gte(-273.14999))]
 ==>/mmadt/ext/Ox=>Ox()[is(true)]
@@ -905,8 +887,7 @@ nat[12]@a
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> *nat
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> *nat
 ==>nat?int<=int()[is(gte(0))]
 fhatos> nat[12]
 ==>nat[12]
@@ -942,8 +923,7 @@ C[-274.0]
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> *C
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> *C
 ==>C?real<=real()[is(gte(-273.14999))]
 fhatos> C[0.0]
 ==>C[0.000000]
@@ -1009,14 +989,12 @@ band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
-thread spawned: inst()[cpp] [stack size:32384]
-==>band?intnoobj<=int(_,_)
-	[band[is(and([gte(from(0)),lte(from(1))]))]]
+fhatos> band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
+==>band?int{?}<=int(_,_)
+	[band?int{?}<=int[is(and([gte(from(0)),lte(from(1))]))]]
 fhatos> 3.band(2,8)                                // <1>
 ==>3
 fhatos> 10.band(2,8)                               // <2>
-[ERROR] [/sys/scheduler] noobj [[noobj][_]] not in range of band(2,8)[band[is(and([gte(from(0)),lte(from(1))]))]] [SIGNATURE HERE]
 ----
 
 ++++
@@ -1050,10 +1028,9 @@ band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
-thread spawned: inst()[cpp] [stack size:32384]
-==>band?intnoobj<=int(min=>_,max=>_)
-	[band[is(and([gte(from(min)),lte(from(max))]))]]
+fhatos> band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
+==>band?int{?}<=int(min=>_,max=>_)
+	[band?int{?}<=int[is(and([gte(from(min)),lte(from(max))]))]]
 fhatos> 3.band(2,8)                           // <1>
 ==>3
 fhatos> 3.band(max=>8,min=>2)                 // <2>
@@ -1061,7 +1038,7 @@ fhatos> 3.band(max=>8,min=>2)                 // <2>
 fhatos> 'abc'.band(2,8)                       // <3>
 [ERROR] [/sys/scheduler] [/sys/lang/parser] 2 is not a str as defined by [str][_] 
 		 \_/mmadt/int is not a subtype of /mmadt/str
-	  thrown at inst 'abc' => band(min=>2,max=>8)[band[is(and([gte(from(min)),lte(from(max))]))]] [min=>2,max=>8]
+	  thrown at inst 'abc' => band?int{?}<=int(min=>2,max=>8)[band?int{?}<=int[is(and([gte(from(min)),lte(from(max))]))]] [min=>2,max=>8]
 ----
 
 ++++
@@ -1097,16 +1074,15 @@ band -> |band?int{?}<=int(min=>else(2),max=>else(8))[is(and([gte(*min),lte(*max)
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> band -> |band?int{?}<=int(min=>else(2),max=>else(8))[is(and([gte(*min),lte(*max)]))]
-thread spawned: inst()[cpp] [stack size:32384]
-==>band?intnoobj<=int(min=>else?noobj<=obj(2)[noobj],max=>else?noobj<=obj(8)[noobj])
-	[band[is(and([gte(from(min)),lte(from(max))]))]]
+fhatos> band -> |band?int{?}<=int(min=>else(2),max=>else(8))[is(and([gte(*min),lte(*max)]))]
+==>band?int{?}<=int(min=>else?noobj<=obj(2)[noobj],max=>else?noobj<=obj(8)[noobj])
+	[band?int{?}<=int[is(and([gte(from(min)),lte(from(max))]))]]
 fhatos> 1.band(min=>1)                        // <1>
 ==>1
 fhatos> 10.band()                             // <2>
-[ERROR] [/sys/scheduler] noobj [[noobj][_]] not in range of band(min=>2,max=>8)[band[is(and([gte(from(min)),lte(from(max))]))]] [SIGNATURE HERE]
 fhatos> {2,3,4,5}.band(min=>3,max=>4)         // <3>
-[ERROR] [/sys/scheduler] noobj [[noobj][_]] not in range of band(min=>3,max=>4)[band[is(and([gte(from(min)),lte(from(max))]))]] [SIGNATURE HERE]
+==>3
+==>4
 ----
 
 ++++
@@ -1172,11 +1148,16 @@ is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
 ==>is_divisble?bool<=int(by?int=>_)
 	[is_divisble[mod(from(by)).eq(0)]]
 fhatos> 10.is_divisible(2)
+[ERROR] [/sys/scheduler] [/mmadt/noobj] noobj accessed as int
+	  thrown at inst 10 => mod(noobj)[cpp] [by?int=>2,0=>noobj]
+	  thrown at inst 10 => is_divisble(by?int=>2)[is_divisble[mod(from(by)).eq(0)]] [by?int=>2]
+fhatos> 10.is_divisible('abc')
+[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_] 
+		 \_/mmadt/str is not a subtype of /mmadt/int
 ----
 
 ++++
@@ -1205,10 +1186,9 @@ band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*m
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*min)).is(lte(*max))]
-thread spawned: inst()[cpp] [stack size:32384]
-==>band?intnoobj<=int(min=>_,max=>is?noobj<=obj(gt?noobj<=obj(from?noobj<=obj(min)[noobj])[noobj])[noobj].else?noobj<=obj(from?noobj<=obj(min)[noobj].plus?noobj<=obj(1)[noobj])[noobj])
-	[band[is(gte(from(min))).is(lte(from(max)))]]
+fhatos> band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*min)).is(lte(*max))]
+==>band?int{?}<=int(min=>_,max=>is?noobj<=obj(gt?noobj<=obj(from?noobj<=obj(min)[noobj])[noobj])[noobj].else?noobj<=obj(from?noobj<=obj(min)[noobj].plus?noobj<=obj(1)[noobj])[noobj])
+	[band?int{?}<=int[is(gte(from(min))).is(lte(from(max)))]]
 fhatos> 2.band(min=>1,max=>1)                 // <1>
 [ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a int as defined by [int][_] 
 		 \_/mmadt/noobj is not a subtype of /mmadt/int
@@ -1236,8 +1216,7 @@ is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').ma
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').map(1)))[mod(*by).eq(0)]
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').map(1)))[mod(*by).eq(0)]
 ==>is_divisble?bool<=int(by?int=>is?noobj<=obj(neq?noobj<=obj(0)[noobj])[noobj].else?noobj<=obj(print?noobj<=obj('error')[noobj].map?noobj<=obj(1)[noobj])[noobj])
 	[is_divisble[mod(from(by)).eq(0)]]
 fhatos> 10.is_divisible(2)
@@ -1245,6 +1224,8 @@ error[ERROR] [/sys/scheduler] [/mmadt/noobj] noobj accessed as int
 	  thrown at inst 10 => mod(noobj)[cpp] [by?int=>2,0=>noobj]
 	  thrown at inst 10 => is_divisble(by?int=>2)[is_divisble[mod(from(by)).eq(0)]] [by?int=>2]
 fhatos> 10.is_divisible('abc')
+error[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_] 
+		 \_/mmadt/str is not a subtype of /mmadt/int
 ----
 
 ++++
@@ -1267,8 +1248,7 @@ int(a=>2)[*a]
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> int(a=>2)[*a]
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> int(a=>2)[*a]
 ==>2
 fhatos> 4 + int(a=>2)[*a]
 ==>6
@@ -1325,8 +1305,7 @@ y -> z
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> *y
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> *y
 fhatos> *z
 fhatos> z -> 12
 ==>12
@@ -1387,8 +1366,7 @@ a -> 12
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> a -> 12
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> a -> 12
 ==>12
 fhatos> *a.plus(10)
 ==>22
@@ -1432,8 +1410,7 @@ a|
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> a?sub -> \|to(b)
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> a?sub -> \|to(b)
 ==>to?noobj<=obj(b)[noobj]
 fhatos> *a?sub
 >sub[
@@ -1487,8 +1464,7 @@ a -> 'axel'
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> a -> 'axel'
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> a -> 'axel'
 ==>'axel'
 fhatos> *a
 ==>'axel'
@@ -1513,29 +1489,46 @@ thread::
 
 ++++
 <!-- 🐖 ./main_runner.out
-thread::create(loop=>||( /
+thread[[loop=>^( /
   from(|c,0).print('c: {_}'). /
   plus(1).to(c). /
   gt(10).to(t/halt). /
-  is(_).print('\n'))).to(|t)
-@t.spawn()
-*c
+  is(_).print('\n'))]]@t
+ @t.spawn()
+ *c
 -->
 ++++
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> thread::create(loop=>||(
+fhatos> thread[[loop=>^(
           from(|c,0).print('c: {_}').
           plus(1).to(c).
           gt(10).to(t/halt).
-          is(_).print('\n'))).to(|t)
-thread spawned: inst()[cpp] [stack size:32384]
-==>thread/::/create
+          is(_).print('\n'))]]@t
+>thread[
+==>loop=>lift(from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n'))
+==>delay=>nat[0]
+==>halt=>true
+>]@t
 fhatos> @t.spawn()
-[ERROR] [/sys/scheduler] [/mmadt/noobj] spawn inst unresolved 
-	         lhs id  inst id    resolve obj
+[INFO]  [/sys/scheduler] t thread spawned
+[INFO]  [t] thread spawned: lift(from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n')) [stack size:16192]
+c: 0
+c: 1
+c: 2
+c: 3
+c: 4
+c: 5
+
+fhatos> c: 6
+c: 7
+c: 8
+c: 9
+c: 10
+[INFO]  [t] thread stopped
 fhatos> *c
+==>11
 ----
 
 ++++
@@ -1611,10 +1604,20 @@ a -> int8[126]                       --- <2>
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> /sys/router/config/resolve/auto_prefix ->
+fhatos> /sys/router/config/resolve/auto_prefix ->
           *(_) + \|[/mmadt/ext/]             // <1>
-thread spawned: inst()[cpp] [stack size:32384]
 >[
+==>
+==>/mmadt/
+==>/mmadt/ext/
+==>/fos/
+==>/fos/sys/
+==>/fos/io/
+==>/fos/sensor/
+==>/fos/ui/
+==>/fos/util/
+==>/sys/
+==>/mmadt/ext/
 >]
 fhatos> a -> int8[126]                       // <2>
 ==>int8[126]
@@ -1861,6 +1864,13 @@ For example, see how the internal `objs` if a `lst` are effected by the applicat
 
 [source,mmadt]
 ----
+fhatos> 2.lst[[1,plus(2),mult(plus(3)),'a']]
+>[
+==>1
+==>4
+==>10
+==>'a'
+>]
 ----
 
 ++++
@@ -1900,7 +1910,9 @@ However, what makes
 [source,mmadt]
 ----
 fhatos> 2.rec[[is(gt(2)) => plus(2), _ => 0]]
-[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(2)) accessed as uri
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj                                      
+	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
 ----
 
 ++++
@@ -1923,9 +1935,13 @@ For instance, `if` is implemented with a two entry `rec`, where one entry maps t
 fhatos> /io/console/config/nest -> 0                  // <1>
 ==>0
 fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>
-[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(2)) accessed as uri
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj                                      
+	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
 fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>
-[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(2)) accessed as uri
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
+	         lhs id      inst id      resolve obj                                      
+	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
 ----
 
 ++++
@@ -1965,19 +1981,18 @@ if-else::
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> {1,2,3}-|[                           
+fhatos> {1,2,3}-|[                           
           is(gt(2)) => mult(-1),      // <1>
           _         => mult(100)]     // <2>
-thread spawned: inst()[cpp] [stack size:32384]
 ==>1
+==>2
+==>3
 fhatos> {1,2,3}-|[                           
           is(gt(2)) => mult(-1),             
           _         => mult(100)]>-
-[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(2)) accessed as uri
-          is(gt(2)) => mult(-1),             
-          _         => mult(100)]>-')[cpp] [code=>'1-|[                           
-          is(gt(2)) => mult(-1),             
-          _         => mult(100)]>-']
+==>100
+==>200
+==>-3
 ----
 
 ++++
@@ -2018,17 +2033,26 @@ fhatos> {1,2,3}-<[
 ==>is(gt(1))=>noobj
 ==>is(gt(2))=>noobj
 >]
+>[
+==>is(gt(0))=>-2
+==>is(gt(1))=>0
+==>is(gt(2))=>noobj
+>]
+>[
+==>is(gt(0))=>-3
+==>is(gt(1))=>0
+==>is(gt(2))=>3
+>]
 fhatos> {1,2,3}-<[                 
           is(gt(0)) => mult(-1),   
           is(gt(1)) => mult(0),    
           is(gt(2)) => _]>-
-[ERROR] [/sys/scheduler] [/mmadt/bcode] is(gt(0)) accessed as uri
-          is(gt(0)) => mult(-1),   
-          is(gt(1)) => mult(0),    
-          is(gt(2)) => _]>-')[cpp] [code=>'1-<[                 
-          is(gt(0)) => mult(-1),   
-          is(gt(1)) => mult(0),    
-          is(gt(2)) => _]>-']
+==>-1
+==>-2
+==>0
+==>-3
+==>0
+==>3
 ----
 
 ++++
@@ -2051,6 +2075,8 @@ guard::
 ----
 fhatos> {1,2,3}.[
 ==>1
+==>2
+==>3
 ----
 
 ++++
@@ -2093,8 +2119,7 @@ hash::
 .conditional hash icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Hash-based_conditionals,2x,role=blue]
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> --- todo
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> --- todo
 ----
 
 ++++
@@ -2129,8 +2154,7 @@ This is, in fact, the case.
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> 1.plus(1)         // <1>
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> 1.plus(1)         // <1>
 ==>2
 fhatos> 1. 2              // <2>
 ==>2
@@ -2180,7 +2204,6 @@ noobj.noobj
 noobj.true
 noobj.6
 noobj.real[3.14]
-noobj.'text {_}'
 noobj.a/b/c
 noobj.[1,2,3]
 noobj.[noobj=>1]
@@ -2196,8 +2219,6 @@ fhatos> noobj.6
 ==>6
 fhatos> noobj.real[3.14]
 ==>3.140000
-fhatos> noobj.'text {_}'
-==>'text console[[delay=>nat[0],loop=>inst()[cpp],config=>[processor=>/sys/vm,nest=>2,ellipsis=>50,prompt=>'
 fhatos> noobj.a/b/c
 ==>a/b/c
 fhatos> noobj.[1,2,3]
@@ -2226,7 +2247,6 @@ true.noobj
 false.true
 false.6
 true.real[3.14]
-false.'text {_}'
 true.a/b/c
 false.[1,2,3]
 true.[false=>0,true=>1]
@@ -2244,8 +2264,6 @@ fhatos> false.6
 ==>6
 fhatos> true.real[3.14]
 ==>3.140000
-fhatos> false.'text {_}'
-==>'text console[[delay=>nat[0],loop=>inst()[cpp],config=>[processor=>/sys/vm,nest=>2,ellipsis=>50,prompt=>'
 fhatos> true.a/b/c
 ==>a/b/c
 fhatos> false.[1,2,3]
@@ -2338,8 +2356,7 @@ fhatos> @a.inspect()
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> a?sub -> |print(_)
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> a?sub -> |print(_)
 ==>print?noobj<=obj(_)[noobj]
 fhatos> a -> 12
 ==>12
@@ -2393,8 +2410,7 @@ For instance, if a natural number stem:[\mathbb{N}] is any non-negative number, 
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> /type/int/nat -> |is(gt(0))
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> /type/int/nat -> |is(gt(0))
 [ERROR] [/sys/router] no mounted structure for /type/int/nat  
 ==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj]
 fhatos> nat[6]
@@ -2456,31 +2472,15 @@ The function of the router is to:
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> /io/console/config/nest->3
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> /io/console/config/nest->3
 ==>3
 fhatos> */sys/router/#/
 >[
 ==>/sys/router=>[
 ===>frame=>[rec][_]
-===>config=>[
-====>resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]
-==>]
-===>query=>[
-====>write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]
-==>]
-===>structure=>[
-====>/sys/#
-====>/mnt/#
-====>/boot/#
-====>/fos/#
-====>/mmadt/#
-====>/io/#
-====>+/#
-====>/disk/#
-====>/shared/#
-====>/bus/#
-==>]
+===>config=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
+===>query=>[write=>[lock=>lock?obj{?}<=obj{?}()[cpp],sub=>sub?obj{?}<=obj()[cpp]]]
+===>structure=>[/sys/#,/mnt/#,/boot/#,/fos/#,/mmadt/#,/io/#,+/#,/disk/#,/shared/#]
 =>]@/sys/router
 >]
 ----
@@ -2519,8 +2519,7 @@ a -> 'meangirl'            --- <5>
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> a -> 'snowbutt'            // <1>
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> a -> 'snowbutt'            // <1>
 ==>'snowbutt'
 fhatos> *a                         // <2>
 ==>'snowbutt'
@@ -2604,8 +2603,7 @@ o.to(u)
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> u -> o
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> u -> o
 ==>o
 fhatos> u.ref(o)
 ==>o
@@ -2647,8 +2645,7 @@ a/a -> 1; a/b -> 2; a/b/c -> 3; a/b/d -> 4;
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> a/a -> 1; a/b -> 2; a/b/c -> 3; a/b/d -> 4;
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> a/a -> 1; a/b -> 2; a/b/c -> 3; a/b/d -> 4;
 fhatos> *a/b            // <1>
 ==>2
 fhatos> *a/b/           // <2>
@@ -2737,8 +2734,7 @@ abc -> <abc?k1=v1,v2&k2=v3&k3=v4,v5,v6>   --- <5>
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> abc?k1=v1&k2=v2&k3=v3                     // <1>
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> abc?k1=v1&k2=v2&k3=v3                     // <1>
 ==>abc?k1=v1&k2=v2&k3=v3
 fhatos> abc?k1=v1,v2&k2=v3&k3=v4,v5,v6            // <2>
 ==>abc?k1=v1,v2&k2=v3&k3=v4,v5,v6
@@ -2793,8 +2789,7 @@ This section will explore the following considerations when designing a _multi-m
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> 1.plus(2)
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> 1.plus(2)
 ==>3
 ----
 
@@ -2871,8 +2866,7 @@ m/2/3 -> 11
 
 [source,mmadt]
 ----
-[INFO]  [/io/console] fhatos> --- write matrix
-thread spawned: inst()[cpp] [stack size:32384]
+fhatos> --- write matrix
 fhatos> m/0/0 -> 0
 ==>0
 fhatos> m/0/1 -> 1
